
    HDFS-1547. Improve decommission mechanism. (suresh)

    HDFS-1588. Remove hardcoded strings for configuration keys, "dfs.hosts"
    and "dfs.hosts.exlude". (Erik Steffl via suresh)

    HDFS-1117. Metrics 2.0 HDFS instrumentation. (Luke Lu)

    HDFS-1544. Ivy resolve force mode off by default. (Luke Lu)

    HDFS-1810. Remove duplicate jars from ivy. (Luke Lu)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-1449. Fix test failures - ExtendedBlock must return 
    block file name in #getBlockName(). (suresh)

    HDFS-1680. Fix TestBalancer. (szetszwo)

    HDFS-1705. Balancer command throws NullPointerException. (suresh via
    szetszwo)

    HDFS-1559. Add missing UGM overrides to TestRefreshUserMappings
    (Todd Lipcon via eli)

    HDFS-1585. Fix build after HDFS-1547 (todd)

    HDFS-1684. Balancer cannot start with with multiple namenodes.  (szetszwo)

    HDFS-1445. Fast Snapshot via batch hardlinks. (Matt Foley)

    HDFS-1656. Fixes an issue to do with fetching of delegation tokens in
    HftpFileSystem. (Kan Zhang via ddas)

    HDFS-1809. Missing DefaultMetricsSystem initialization breaks some tests.
    (suresh)

    HDFS-1602. Fix testStorageRestore (boryas)

Release 0.22.0 - Unreleased

  NEW FEATURES
    HDFS-992. Re-factor block access token implementation to conform to the 
    generic Token interface in Common (Kan Zhang and Jitendra Pandey via 
    jghoman)

    HDFS-599. Allow NameNode to have a seprate port for service requests from
    client requests. (Dmytro Molkov via hairong)

    HDFS-1004. Update NN to support Kerberized SSL from HADOOP-6584. 
    (jghoman and Kan Zhang via jghoman)

    HDFS-1005. Fsck security. (borya and Kan Zhang via jghoman)

    HDFS-1006. getImage/putImage http requests should be https for the case 
    of security enabled. (borya and jghoman via jghoman)

    HDFS-1033. In secure clusters, NN and SNN should verify that the remote 
    principal during image and edits transfer. (jghoman)
